--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p><b>Этот преступник опасен и пользуется своим очарованием и харизмой.</b></p>
     <h2>ОБРАТИТЕ ВНИМАНИЕ!</h2>
     <p>По некоторым данным преступник после побега направлялся в эту точку.</p>
-    <img src="https://imgur.com/a/lWOwhf5" alt="Карта с местоположением" style="max-width:100%; margin: 20px 0;">
+    <img src="photo_2024-12-04_17-43-47.jpg" alt="Карта с местоположением" style="max-width:100%; margin: 20px 0;">
     <p><b>Удачного расследования!</b></p>
     <p style="font-size: smaller;">P.S.: По всем вопросам вы можете обратиться в отдел полиции (тг: Долбоёбинск).</p>
 </body>
